--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -13,4 +13,5 @@
   <button type="submit">Login</button>
 </form>
 <p><a href="{{ url_for('auth.register') }}">Need an account?</a></p>
+<p><a href="{{ url_for('auth.forgot_password') }}">Forgot your password?</a></p>
 {% endblock %}
