--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,8 +12,12 @@
       <h1><a href="{{ url_for('core.index') }}">Internet Applications</a></h1>
       <nav>
         <a href="{{ url_for('tournaments.list_tournaments') }}">Tournaments</a>
-        <a href="{{ url_for('users.dashboard') }}">My Dashboard</a>
-        <a href="{{ url_for('auth.login') }}">Login</a>
+        {% if current_user.is_authenticated %}
+          <a href="{{ url_for('tournaments.create') }}">New Tournament</a>
+          <a href="{{ url_for('users.dashboard') }}">My Dashboard</a>
+        {% else %}
+          <a href="{{ url_for('auth.login') }}">Login</a>
+        {% endif %}
       </nav>
     </div>
   </header>
